all tests passing (fr this time, with JAVA_HOME pointing to version 21)